# CogEgoAgent

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
doc/: doxyfile
include/: CogAIModule.h  CogAgent.h  CogAgentParameters.h  CogAlgorithm.h  CogConfig.h  utils.h
src/: CogAIModule.cpp  CogAgent.cpp  CogAlgorithm.cpp  CogConfig.cpp
